Prevent line break when overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -50,7 +50,8 @@ body {
     text-align: right;
     padding: 0.3rem 0.5rem;
     border: 5px solid #5e6b7b;
-    word-break: break-all;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .display-top,
